--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -78,7 +78,7 @@
             };
 
             try {
-                const res = await fetch("http://localhost:5000/api/cars", {
+                const res = await fetch("https://car-on-rent.onrender.com/api/cars", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
