--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,7 +44,7 @@
             const password = e.target.password.value;
 
             try {
-                const res = await fetch("http://localhost:5000/api/auth/login", {
+                const res = await fetch("https://car-on-rent.onrender.com/api/auth/login", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
