--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -58,7 +58,7 @@
       }
 
       try {
-        const res = await fetch("http://localhost:5000/api/auth/signup", {
+        const res = await fetch("https://car-on-rent.onrender.com/api/auth/signup", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
